--- a/index.Rmd
+++ b/index.Rmd
@@ -492,13 +492,13 @@ knitr::include_graphics("images/01-intro/proteomics.png")
 
 ---
 
-# Biotransformation of 8:2 FTOH can form covalent adducts with glutathione and cysteine residues
+# Hydro- and oleiophobic perfluorinated alkyl substances (PFAS) are used extensively in surface coatings and polymers
 
 .center[
-![:scale 90%](images/04-FSPE/ftoh_v2.png)
+![:scale 90%](images/04-FSPE/pfas_coat.png)
 ]
 
-.footnoteRight[[Rand & Mabury<br> *Cell Biol. Toxicol.* (2012)](https://link.springer.com/article/10.1007/s10565-012-9211-4)<br>[Rand & Mabury <br><i>ES&T</i> (2012)](https://pubs.acs.org/doi/10.1021/es303760u)]
+.footnoteRight[ See [Evich et al. *Science* <br>(2022)](https://www.science.org/doi/10.1126/science.abg9065) for review]
 ---
 
 # 8:2 FTAC can also form covalant adducts with glutathione
@@ -654,14 +654,6 @@ knitr::include_graphics("images/01-intro/proteomics.png")
 ![:scale 60%](images/05-74PFAS/74pfas-toc.png)
 
 ]
----
-
-background-image: url("images/05-74PFAS/74PFAS.png")
-background-size: cover
-
-# PFAS are a structurally diverse class of compounds
-
-.footnoteRight[[Patlewicz, et al.<br><i>EHP</i> 2019<br><br> ](https://ehp.niehs.nih.gov/doi/10.1289/EHP4555)]
 
 ---
 
@@ -686,8 +678,16 @@ background-size: cover
 
 ---
 
-# Traditional fish embryo toxicity endpoints are poor predictors of weak acute and sublethal toxicities
+background-image: url("images/05-74PFAS/74PFAS.png")
+background-size: cover
 
+# PFAS are a structurally diverse class of compounds
+
+.footnoteRight[[Patlewicz, et al.<br><i>EHP</i> 2019<br><br> ](https://ehp.niehs.nih.gov/doi/10.1289/EHP4555)]
+
+---
+
+# Traditional fish embryo toxicity endpoints are poor predictors of weak acute and sublethal toxicities
 
 .left-column285[
 .hide-bg[
@@ -707,15 +707,15 @@ background-size: cover
 
 ---
 
-# Multiplexing exposure proteomic samples reduces<br>instrument time and improves quantification
+# Dimethyl labelling combined with plexDIA balances instrument time, sample depth, and quantification
 
 .hide-bg[
 .center[
-![:scale 90%](images/05-74PFAS/dimeth.png)
+![:scale 90%](images/05-74PFAS/new_scheme.png)
 ]
 ]
 
-.footnoteRight[[DIA-NN software<br> created by V. Demichev,<br>*Nature Methods* 2020](https://www.nature.com/articles/s41592-019-0638-x)]
+.footnoteRight[[DIA-NN by <br> Demichev et al. 2020](https://www.nature.com/articles/s41592-019-0638-x)]
 
 ---
 
@@ -733,7 +733,7 @@ background-size: cover
 
 ---
 
-# Reanalysis of identifical samples shows DIA outperforms DDA in coverage and data completeness
+# Reanalysis of identifical samples shows plexDIA outperforms DDA in coverage and data completeness
 .hide-bg[
 .center[
 ![:scale 65%](images/05-74PFAS/fig2-benchmark.png)
@@ -741,26 +741,6 @@ background-size: cover
 ]
 
 ---
-class: middle center
-
-## ELS zebrafish exposures to .my-bold[74 PFAS at two concentrations].
-
---
-
-## .my-bold[666 exposure samples] multiplexed into 222 LC-MS samples.
-
---
-## 60 days of instrument time producing .my-bold[1217 GB of data].
-
---
-## Over .my-bold[10 million sequenced peptides].  
-
---
-
-## Relative quantification of .my-bold[1969 proteins] across all exposures.
-
----
-
 
 # Proteome response to PFAS exposure belies chemical classification, suggesting more complex mechanisms
 
@@ -770,7 +750,7 @@ class: middle center
 ]
 ]
 
-.footnoteLeft[5 µM PFAS results<br> **PFAS 60** ommitted due to<br>100% mortality]
+.footnoteLeft[5 µM PFAS exposure,<br> **PFAS 60** omitted due to<br>100% mortality]
 
 ---
 
@@ -881,7 +861,7 @@ class: middle center
 .footnoteLeft[[Tian et al. *Science* 2020](https://www.science.org/doi/10.1126/science.abd6951)<br>[Hartl et al. *Nature* 2011](https://www.nature.com/articles/nature10317)]
 ---
 
-# Chemical Proteomics Methods for Elucidating the <br>Physical Protein Targets of Environmental Contaminants
+# Chemical Proteomics Methods for Elucidating the<br> Protein Targets of Environmental Contaminants
 
 .left-column[
 <br>
@@ -896,7 +876,7 @@ class: middle center
 .right[
 ![:scale 60%](images/01-intro/thesis-toc.png)
 ]
-.footnoteLeft[Slides available here: .my-bold[[davidrosshall.github.io/phd-defence-talk](https://davidrosshall.github.io/phd-defence-talk/#1)]]
+.footnoteLeft[Slides available here: .my-bold[[davidrosshall.github.io/pnnl-talk](https://davidrosshall.github.io/pnnl-talk/#1)]]
 <!-- --- -->
 
 <!-- # SI: Entries in the 74 PFAS chemical library -->
