--- a/plots.Rmd
+++ b/plots.Rmd
@@ -198,45 +198,41 @@ det <- read_csv("data/ftac_detections.csv") %>%
 #   facet_wrap(~sample) +
 #   scale_y_continuous(trans = "log10")
 
-rects <- data.frame(xstart = seq(0.5,3.5,1),
-                    xend = seq(1.5,4,1),
+rects <- data.frame(xstart = seq(0.5, 1.5, 2.5),
+                    xend = seq(1.5, 2.5, 3.5),
                     col = c("yellow","orange","blue"))
 
 ggplot(data = det) +
-  geom_rect(data = rects, 
-            aes(ymin = 0, ymax = 100, 
-                xmin = xstart, 
-                xmax = xend), alpha = 0.5) +
+   geom_rect(xmin = 1.5, xmax = 2.5, ymin = 0, ymax = 80, alpha = 0.1, fill = "lightgrey") +
   geom_linerange(
     aes(
       x = sample,
-      ymin = 0, 
-      ymax = df, 
+      ymin = 0,
+      ymax = df,
       colour = pfas
       ),
     position = position_dodge(width = 1)
     ) +
   geom_point(
     aes(
-      x = sample, 
-      y = df, 
+      x = sample,
+      y = df,
       colour = pfas
     ),
     position = position_dodge(width = 1)
-  ) +
-  
-  #geom_linerange(aes(x = sample, xend = sample, y = 0, yend = df),position = position_dodge(width = 1)) +
-  #geom_point() +
+  ) + 
+
   facet_wrap(~study, nrow = 2, scale = "free_y") +
   labs(x = "",
        y = "Detection frequency (%)") +
+ # geom_rect(xmin = 1.5, xmax = 2.5, ymin = 0, ymax = 80, alpha = 0.1, fill = "lightgrey") +
 
- theme_bw() + 
+ theme_bw() +
  theme(
-   panel.grid.major = element_blank(), 
+   panel.grid.major = element_blank(),
    panel.grid.minor = element_blank()
        ) +
-  coord_flip() 
+  coord_flip()
 
 ```
 
