--- a/plots.Rmd
+++ b/plots.Rmd
@@ -185,8 +185,12 @@ ggsave(filename = "images/01-intro/ahr_binding_plot.png",
 library(tidyverse)
 
 det <- read_csv("data/ftac_detections.csv") %>%
-  mutate(sample = paste0(sample, "\nn = (", sample_n,")"))
+  mutate(sample = paste0(sample, "\nn = (", sample_n,")")) %>%
+  filter(str_detect(study, "Xia"))
+```
 
+
+```{r}
 # ggplot(data = det,
 #        aes(x = df,
 #            y = mean,
@@ -203,7 +207,7 @@ rects <- data.frame(xstart = seq(0.5, 1.5, 2.5),
                     col = c("yellow","orange","blue"))
 
 ggplot(data = det) +
-   geom_rect(xmin = 1.5, xmax = 2.5, ymin = 0, ymax = 80, alpha = 0.1, fill = "lightgrey") +
+  geom_rect(xmin = 1.5, xmax = 2.5, ymin = 0, ymax = 100, alpha = 0.1, fill = "lightgrey") +
   geom_linerange(
     aes(
       x = sample,
@@ -222,17 +226,34 @@ ggplot(data = det) +
     position = position_dodge(width = 1)
   ) + 
 
-  facet_wrap(~study, nrow = 2, scale = "free_y") +
+  #facet_wrap(~study, nrow = 2, scale = "free_y") +
   labs(x = "",
-       y = "Detection frequency (%)") +
+       y = "Detection frequency (%)",
+       color = "") +
  # geom_rect(xmin = 1.5, xmax = 2.5, ymin = 0, ymax = 80, alpha = 0.1, fill = "lightgrey") +
-
+  scale_y_continuous(expand = c(0, 0), breaks = c(0, 25, 50, 75, 100), limits = c(0, 100)) +
  theme_bw() +
  theme(
+   text = element_text(size = 10),
    panel.grid.major = element_blank(),
-   panel.grid.minor = element_blank()
+   panel.grid.minor = element_blank(),
+   legend.position = "bottom",
+   legend.spacing.x = unit(0, "cm"),
+   axis.text.x = element_text(angle = 45, vjust = 1, hjust=1)
+   
        ) +
-  coord_flip()
+  guides(color = guide_legend(override.aes = list(linetype = 0),
+                              nrow=3,
+                              byrow=TRUE)) 
+  #+ coord_flip()
 
+```
+
+```{r eval=FALSE}
+ggplot2::ggsave("images/05-74PFAS/ftac_detfreq.svg",
+                units = "in", 
+                width = 2,
+                height = 4,
+                dpi = 300)
 ```
 
