--- a/index.Rmd
+++ b/index.Rmd
@@ -165,7 +165,7 @@ background-color: #000000
 .footnoteRight[[Caven<br>Images<br>(2021)](https://www.nature.com/articles/d43978-021-00009-6)]
 
 ???
-- Modern assessments have improved in understanding and quality of animal welface
+- Modern assessments have improved in understanding and quality of animal welfare
 - Triaged using *in vitro* screening; lower doses; and lower endpoints 
 - Still reliant on animal testing
 ---
@@ -326,6 +326,12 @@ knitr::include_graphics("images/01-intro/proteomics.png")
 ![:scale 90%](images/03-DBP/reg_dbps.png)
 ]
 .footnoteRight[.my-bold[[THMs](https://www.canada.ca/en/health-canada/services/publications/healthy-living/guidelines-canadian-drinking-water-quality-trihalomethanes.html)] and .my-bold[[HAA5](https://www.canada.ca/en/health-canada/services/publications/healthy-living/guidelines-canadian-drinking-water-quality-guideline-technical-document-haloacetic-acids.html)] are <br>regulated in Canada]
+
+???
+
+- Regulated compounds are most abbundant, but not the most toxic. 
+- General trend in toxicity is towards bottom-right. 
+
 ---
 
 # HAM and HAA geno- and cyto-toxicity is purportedly due to their reactivity with, potentially critical, cystein residues 
@@ -335,6 +341,11 @@ knitr::include_graphics("images/01-intro/proteomics.png")
 ]
 
 .footnoteLeft[[Dong et al.<br>*ES&T*, 2018](http://pubs.acs.org/doi/10.1021/acs.est.8b01675)]
+
+???
+
+- Goal of project is to identify proteins modified by DBPs to assess toxicity. 
+
 
 --
 
@@ -355,7 +366,7 @@ knitr::include_graphics("images/01-intro/proteomics.png")
 ]   
 ]
 .footnoteLeft[**AA** = acetic acid<br>**AM** = acetamide]
-
+.footnoteRight[MCF7 cells, 16 hr exposure<br>MTT & Nrf2-Keap1 luciferase assay]
 ???
 
 - **Nrf2**: Nuclear factor erythroid 2-related factor 2, binds to and promotes **AHR** (antioxidant response elements )
@@ -383,7 +394,7 @@ knitr::include_graphics("images/01-intro/proteomics.png")
 ]
 ]
 
-.footnoteRight[• 100 µM DBP<br>• Ctrl = water]
+.footnoteRight[100 µM DBP,<br>10 µM probe,<br>1 hr exposure,<br>n = 3/exp.]
 
 ---
 # Direct adduct monitoring validated many of the suspected targets of IAM and IAA
@@ -395,7 +406,7 @@ knitr::include_graphics("images/01-intro/proteomics.png")
 ]
 <!-- .footnoteLeft[![:scale 60%](images\03-DBP\nem_struct.png)] -->
 .footenoteLeft[**NEM** = N-ethylmaleimide<br>]
-
+.footnoteRight[100 µM DBP,<br>1 hr exposure,<br>n = 4/exp.]
 
 ---
 
@@ -409,7 +420,10 @@ knitr::include_graphics("images/01-intro/proteomics.png")
 
 .footenoteLeft[**IAM** = iodoacetamide<br>**IAA** = iodoacetic acid<br>**GAPDH** = Glyceraldehyde 3-phosphate dehydrogenase]
 
+???
 
+- under normal conditions, GAPDH is a tetramer
+- Used AlphaFold for clearer monomer structure
 
 ---
 
@@ -429,6 +443,11 @@ knitr::include_graphics("images/01-intro/proteomics.png")
 ]
 
 .footnoteRight[**GAPDH** = Glyceraldehyde-3-phosphate dehydrogenase<br>**SOD1** = Superoxide dismutase [Cu-Zn]<br>[Pals et al. *ES&T* 2011](https://pubs.acs.org/doi/10.1021/es2008159)]
+
+???
+
+- **GAPDH** catalyzes 6th step of glycolysis, thus breaks down glucose for energy
+- **SOD1** dismutates superoxide radical; superoxide byproduct of O2 metabolism, and if not regulated damages cells. 
 
 ---
 
@@ -486,7 +505,7 @@ knitr::include_graphics("images/01-intro/proteomics.png")
 .footnoteLeft[[Per- and Polyfluoroalkyl <br> Substances (PFAS) Report (2023)](https://www.whitehouse.gov/wp-content/uploads/2023/03/OSTP-March-2023-PFAS-Report.pdf)]
 ---
 
-# FT(M)AC monomers are detected in fluoropolymer treated textiles, among other consumer products
+# FT(M)AC monomers are detected in fluoropolymer treated textiles, among other consumer products 
 
 .center[
 ![:scale 100%](images/04-FSPE/pfas_coat.png)
@@ -512,19 +531,21 @@ knitr::include_graphics("images/01-intro/proteomics.png")
 .footnoteRight[*in 10 mM NaH<sub>2</sub>PO<sub>4</sub><br>at pH 7.5, 20 °C*]
 ---
 
-# Detection of 8:2 FTAC modified peptides hampered by low-intensity and overlapping retention times of modified peptides 
+# Detection of 8:2 FTAC modified peptides hampered by low-intensity and coelution of modified peptides 
 <!--adjust label on y-axis to state "Cysteine containing peptide" --> 
 
-.center[
+.left-column[![:scale 90%](images/04-FSPE/bsa_red_v2.png)]
+
+.right-column[
 .hide-bg[
-![:scale 80%](images/04-FSPE/si-bsa-anno-peps2.png)
+![:scale 100%](images/04-FSPE/si-bsa-anno-peps2.png)
 ]
 ]
 
-.footnoteLeft[**BSA** = Bovine<br>Serum Albumin<br>**IAM** = iodoacetamide]
+.footnoteRight[**BSA** = Bovine<br>Serum<br>Albumin<br>.]
 ---
 
-# Refinement of Fluorous Solid Phase Extraction enables the selective enrichment of long-chain PFAS adducted peptides
+# Fluorous Solid Phase Extraction enables the selective enrichment of long-chain PFAS adducted peptides
 
 .center[
 ![:scale 90%](images/04-FSPE/fspe-scheme.png)
@@ -550,7 +571,7 @@ knitr::include_graphics("images/01-intro/proteomics.png")
 ]
 ---
 
-# FSPE enrichement helped to identify<br>over 107 proteins modified by 8:2 FTAC
+# FSPE enrichement of helped to identify over 107 proteins modified by 8:2 FTAC in crude cell lysates
 
 .hide-bg[
 .center[
@@ -633,7 +654,8 @@ knitr::include_graphics("images/01-intro/proteomics.png")
 .left-column[
 <br>
 <br>
-## <p style="color:black;">David Hall, Jiajun Han, Wen Gu, Diwen Yang, and Hui Peng </p>
+## <p style="color:black;">David Hall, Jiajun Han, Wen Gu, Diwen Yang, and Hui Peng</p>
+### Manuscript in preparation
 
 ##  
 ## 
@@ -645,16 +667,6 @@ knitr::include_graphics("images/01-intro/proteomics.png")
 ![:scale 60%](images/05-74PFAS/74pfas-toc.png)
 
 ]
-
-
----
-
-background-image: url("images/05-74PFAS/74PFAS.png")
-background-size: cover
-
-# PFAS are a structurally diverse class of compounds
-
-.footnoteRight[[Patlewicz, et al.<br><i>EHP</i> 2019<br><br> ](https://ehp.niehs.nih.gov/doi/10.1289/EHP4555)]
 
 ---
 
@@ -677,6 +689,16 @@ background-size: cover
 ]
 .footnoteRight[[Cavanagh &<br>McCarthy, 2014](https://ki-images.mit.edu/2014/wellcome)]
 
+
+---
+
+background-image: url("images/05-74PFAS/74PFAS.png")
+background-size: cover
+
+# PFAS are a structurally diverse class of compounds
+
+.footnoteRight[[Patlewicz, et al.<br><i>EHP</i> 2019<br><br> ](https://ehp.niehs.nih.gov/doi/10.1289/EHP4555)]
+
 ---
 
 # Traditional fish embryo toxicity endpoints are poor predictors of weak acute and sublethal toxicities
@@ -694,6 +716,10 @@ background-size: cover
 ]
 
 .footnoteRight[[Han et al.<br><i>EHP</i>, 2021](https://ehp.niehs.nih.gov/doi/10.1289/EHP7169)]
+
+???
+
+- Coloured compounds are historically or toxicologically significant
 
 ---
 
@@ -803,7 +829,7 @@ background-size: cover
 
 ---
 
-# Concluding remarks for my PhD work
+# Concluding remarks for my PhD work 
 
 .pull-left[
 <br>
